--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "svelte-carousel": "^1.0.25",
+    "svelte-fa": "^3.0.4",
     "svelte-scrolling": "^1.3.0"
   }
 }
