--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "gsap": "^3.12.2",
     "svelte-carousel": "^1.0.25",
     "svelte-fa": "^3.0.4",
     "svelte-scrolling": "^1.3.0"
