--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.0.0",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.4.5"
   },
   "dependencies": {
