--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
+    "svelte-routing": "^2.6.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.4.5"
   },
